# genesis-pantheon

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  oracles.md  personas.md
examples/01_hello_world/: README.md  main.py
examples/02_custom_persona/: README.md  main.py
examples/03_research_agent/: README.md  main.py
examples/04_code_review/: README.md  main.py
examples/05_data_analysis/: README.md  main.py
genesis_pantheon/: __init__.py  blueprint.py  chronicle.py  cli.py  collective.py  constants.py  ledger.py  logger.py  nexus.py  nexus_mixin.py  schema.py
genesis_pantheon/arena/: __init__.py  base.py  software_arena.py
genesis_pantheon/configs/: __init__.py  browser_config.py  oracle_config.py  search_config.py  workspace_config.py
genesis_pantheon/directives/: __init__.py  add_requirement.py  allocate_tasks.py  base.py  condense_code.py  craft_code.py  design_system.py  diagnose_error.py  draft_vision.py  execute_code.py  generate_tests.py  node.py  review_code.py  review_design.py  user_directive.py
genesis_pantheon/oracles/: __init__.py  anthropic_oracle.py  azure_oracle.py  base.py  gemini_oracle.py  human_oracle.py  ollama_oracle.py  openai_oracle.py  registry.py
genesis_pantheon/oracles/postprocess/: __init__.py  repair.py
genesis_pantheon/personas/: __init__.py  code_crafter.py  insight_hunter.py  mission_coordinator.py  persona.py  quality_guardian.py  system_architect.py  vision_director.py
genesis_pantheon/utils/: __init__.py  common.py  exceptions.py  git_ops.py  output_repair.py  project_repo.py  serialization.py  yaml_model.py
tests/: conftest.py  test_blueprint.py  test_chronicle.py  test_cli.py  test_collective.py  test_ledger.py  test_nexus.py  test_output_repair.py  test_project_repo.py  test_schema.py  test_serialization.py  test_utils_common.py
tests/integration/: test_pipeline.py
tests/test_arena/: test_base.py  test_software_arena.py
tests/test_directives/: test_base.py  test_concrete_directives.py  test_node.py
tests/test_oracles/: test_base.py  test_postprocess.py
tests/test_personas/: test_built_in_personas.py  test_persona_base.py
